--- a/learn_typeorm/package.json
+++ b/learn_typeorm/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.16",
